[project]
name = "email-support-openenv"
version = "0.1.0"
description = "Email Support OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entry_point = "server.app:app"
environment = "server.env:EmailEnv"